# bot-master

./: .gitignore  README.md  bots.yaml  install.sh  pyproject.toml
bot_master/: app.py  app.tcss  cli.py  daemon.py  process_manager.py  protocol.py
