[project]
name = "bot-master"
version = "0.1.1"
description = "Process manager for Telegram bots with auto-restart, persistent logging, and a Textual TUI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "textual>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
bot-master-daemon = "bot_master.daemon:main"
bot-master = "bot_master.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.16.5",
]
